fix scrollbar, hide labels of lower peaks

--- a/src/components/PeakLabel.css
+++ b/src/components/PeakLabel.css
@@ -5,11 +5,12 @@
   transform: rotate(-60deg) translate(+0.2em, -1.0em);
   white-space: nowrap;
   overflow-x: visible;
+  background-color: light-dark(white, black);
 }
 .peakStroke {
   border-left: 1px solid light-dark(black, white);
   height: 2em;
-  width: 0px;
+  min-width: 0px;
 }
 .labelContainer {
 }
